# sgx-prover

./: .dockerignore  .gitignore  Cargo.toml  README.md  rust-toolchain
crates/base/: Cargo.toml
crates/base/src/: alive.rs  buffer_vec.rs  channel.rs  errors.rs  format.rs  keypair.rs  lib.rs  log.rs  primitive_convert.rs  thread.rs  time.rs
crates/clients/: Cargo.toml
crates/clients/src/: eth.rs  http.rs  lib.rs
crates/linea/executor/: Cargo.toml
crates/linea/executor/src/: executor.rs  lib.rs  types.rs  zktrie_state.rs
crates/linea/linea/: Cargo.toml
crates/linea/linea/src/: batch_task.rs  block_executor.rs  cache.rs  engine.rs  prover.rs  trie.rs  verifier.rs  zktrie_state.rs
crates/linea/mimc/: Cargo.toml
crates/linea/mimc/src/: constants.rs  fr.rs  hash.rs  lib.rs
crates/linea/shomei/: Cargo.toml
crates/linea/shomei/src/: client.rs  lib.rs  types.rs
crates/linea/verifier/: Cargo.toml
crates/linea/verifier/src/: block_trace.rs  db.rs  lib.rs  pob_context.rs  verifier.rs
crates/linea/zktrie/: Cargo.toml
crates/linea/zktrie/src/: hash.rs  lib.rs  node.rs  sparse_merkle_trie.rs  storage.rs  trace.rs  trie.rs  utils.rs
crates/linea/zktrie/testdata/: read_trace.hex
crates/prometheus/: Cargo.toml
crates/prometheus/src/: lib.rs  registry.rs  types.rs
crates/prover/: Cargo.toml
crates/prover-types/: Cargo.toml
crates/prover-types/src/: api.rs  lib.rs  pob.rs  poe.rs  primitives.rs  string_interning.rs  task_type.rs
crates/prover/src/: api.rs  da.rs  lib.rs  metrics.rs  task_manager.rs  types.rs
crates/scroll-executor/: Cargo.toml
crates/scroll-executor/src/: executor.rs  lib.rs  types.rs
crates/scroll-verifier/: Cargo.toml
crates/scroll-verifier/src/: block_trace.rs  context.rs  execution_node.rs  hardfork.rs  lib.rs  pob.rs  verifier.rs
crates/scroll-verifier/src/batch/: batch_header.rs  batch_task.rs  error.rs  kzg.rs  mod.rs  utils.rs
crates/scroll-verifier/src/batch/da_batch/: builder.rs  mod.rs  utils.rs
crates/scroll-verifier/src/batch/da_batch/v0/: mod.rs
crates/scroll-verifier/src/batch/da_batch/v1/: mod.rs
crates/scroll-verifier/src/batch/da_batch/v2/: mod.rs
crates/scroll-verifier/src/batch/da_batch/v3/: mod.rs
crates/scroll-verifier/src/batch/da_batch/v4/: mod.rs
crates/scroll/executor/src/: eth_primitives_convert.rs  lib.rs  types.rs
crates/scroll/verifier/: Cargo.toml
crates/scroll/verifier/src/: block_trace.rs  hardfork.rs  lib.rs
crates/scroll/verifier/src/batch/: batch_chunk.rs  error.rs  mod.rs
crates/scroll/verifier/src/batch/da_batch/: builder.rs
crates/scroll/verifier/src/batch/da_batch/v1/: mod.rs
crates/scroll/verifier/src/batch/da_batch/v2/: mod.rs
crates/scroll/verifier/src/batch/da_batch/v3/: mod.rs
docker/: Dockerfile  build.sh  entrypoint.sh
scripts/: attestor.sh  executor.sh  prover.sh  update.sh  verifier.sh
src/apps/attestor/: Cargo.toml
src/apps/attestor/src/: app.rs  lib.rs  types.rs
src/apps/prover/: Cargo.toml
src/apps/prover/src/: api.rs  app.rs  batch_commiter.rs  da.rs  lib.rs  metric.rs  types.rs
src/apps/src/: lib.rs
src/common/eth_client/: Cargo.toml
src/common/eth_client/src/: beacon_head_state.rs  execution_client.rs  hash_pool.rs  head_state.rs  lib.rs  log_trace.rs  tx_sender.rs
src/common/evm_executor/: Cargo.toml
src/common/evm_executor/src/: context.rs  executor.rs  fee.rs  lib.rs  precompile.rs  state_fetcher.rs  state_proxy.rs
src/common/evm_executor/testdata/: ecRecover.json  modexp_eip2565.json
src/common/linea/src/: batch_task.rs  block_executor.rs  engine.rs  lib.rs  prover.rs  verifier.rs
src/common/prometheus/: Cargo.toml
src/common/prometheus/src/: lib.rs  registry.rs  types.rs
src/common/prover/: Cargo.toml
src/common/prover/src/: attestation.rs  executor.rs  lib.rs  prover.rs  trie_state.rs  types.rs
src/common/scroll_types/: Cargo.toml
src/common/scroll_types/src/: batch.rs  block.rs  chunk.rs  lib.rs  poe.rs  poseidon.rs  signer.rs  state.rs  trace.rs  transaction.rs  zstd.rs
src/common/sgxlib-ra/: Cargo.toml  remote_attestation.edl
src/common/sgxlib-ra/src/: api.rs  client.rs  ffi.rs  ias_server.rs  lib.rs  self_attestation.rs  states.rs  types.rs
src/common/solidity/: Cargo.toml
src/common/solidity/src/: enc.rs  lib.rs  parse.rs
src/common/statedb/: Cargo.toml
src/common/statedb/src/: cache.rs  fetcher.rs  lib.rs  map_state.rs  mem_store.rs  statedb.rs  trie_state.rs  types.rs
src/common/statedb/src/v2/: mod.rs  trie.rs  trie_state.rs
src/common/verifier/: Cargo.toml
src/common/verifier/src/: client.rs  lib.rs
src/common/zktrie/: Cargo.toml  README.md
src/common/zktrie/src/: byte32.rs  byte32_test.rs  database.rs  hash.rs  hash_test.rs  lib.rs  node.rs  node_test.rs  proof.rs  sparse_merkle_trie.rs  storage.rs  trace.rs  trie.rs  util.rs  utils.rs  zktrie.rs  zktrie_test.rs
src/common/zktrie/testdata/: deletion_trace.hex  from_proof.hex  insertion_trace.hex  read_zero_trace.hex  update_trace.hex
testdata/: scroll-mainnet-v0-commit-27589.calldata  scroll-mainnet-v0-finalize-27589.calldata  scroll-mainnet-v1-commit-175900.calldata  scroll-mainnet-v1-finalize-175900.calldata  scroll-mainnet-v2-commit-300000.calldata  scroll-mainnet-v2-finalize-300000.calldata  scroll-mainnet-v3-commit-310004.calldata  scroll-mainnet-v3-finalize-310004.calldata  scroll-sepolia-v4-commit-75297.calldata  scroll-sepolia-v4-commit-75450.calldata  scroll-sepolia-v4-commit-75595.calldata  scroll-sepolia-v4-finalize-75297.calldata  scroll-sepolia-v4-finalize-75450.calldata  scroll-sepolia-v4-finalize-75595.calldata  test_scroll.sh
verifier/: hardhat.config.ts  package-lock.json  package.json
verifier/contracts/: AutomataDcapV3Attestation.sol  SGXVerifier.sol  sgx_verifier.sol
verifier/contracts/interfaces/: IAttestation.sol
verifier/scripts/: add_mrenclave.ts  change_time.ts  deploy.ts
