[workspace]
resolver = "2"
members = ["bin/*", "crates/base", "crates/clients", "crates/prover", "crates/scroll-executor", "crates/scroll-verifier", "crates/prover-types", "crates/prometheus"]

[workspace.package]
edition = "2021"
version = "0.4.6"
authors = ["Automata Team"]
homepage = "https://www.ata.network/"

[workspace.dependencies]
scroll-executor = { path = "crates/scroll-executor" }
scroll-verifier = { path = "crates/scroll-verifier" }
clients = { path = "crates/clients" }
base = { path = "crates/base" }
prover-types = { path = "crates/prover-types" }
prometheus = { path = "crates/prometheus" }

serde = { version = "=1.0.197", features = ["derive"] }
serde_json = { version = "1" }
automata-sgx-builder = { git = "https://github.com/automata-network/automata-sgx-builder", branch = "main" }
blst = { version = "=0.3.11" }
scroll-revm = { package = "revm", git = "https://github.com/automata-network/scroll-revm", branch = "scroll-evm-executor/v41", default-features = false, features = ["scroll-default-handler", "std", "optional_no_base_fee", "scroll-poseidon-codehash"] }
lazy_static = "1.5.0"

env_logger = { version = "0.11" }
log = { version = "0.4" }
zktrie = { git = "https://github.com/scroll-tech/zktrie.git", branch = "main", features= ["rs_zktrie"] }

# rpc
jsonrpsee = { git = "https://github.com/automata-network/jsonrpsee" }

scroll-zstd = { git = "https://github.com/scroll-tech/da-codec" }
scroll-zstd-encoder = { git = "https://github.com/scroll-tech/da-codec", package = "encoder" }
alloy-primitives = { version = "0.7", features = ["serde"] }
async-trait = "0.1.73"
c-kzg = "1"
hex = "0.4.3"

[patch.crates-io]
ethers-core = { git = "https://github.com/scroll-tech/ethers-rs.git", branch = "feat/rkyv" }
ethers-signers  = { git = "https://github.com/scroll-tech/ethers-rs.git", branch = "feat/rkyv" }
primitive-types = { git = "https://github.com/scroll-tech/parity-common.git", branch = "feat/rkyv" }
ethereum-types = { git = "https://github.com/scroll-tech/parity-common.git", branch = "feat/rkyv" }
ff = { git = "https://github.com/scroll-tech/ff", branch = "feat/sp1" }

blst = { git = "https://github.com/automata-network/blst", branch = "teaclave_2.0" }
ring = { git = "https://github.com/automata-network/ring-sgx" }

[patch.'https://github.com/scroll-tech/zstd-rs']
zstd = { git = "https://github.com/automata-network/scroll-zstd-rs", branch = "hack/mul-block-2.0"}

[profile.release]
debug-assertions = true

