[package]
name = "base"
version.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
log.workspace = true
env_logger.workspace = true
chrono = "0.4.38"
async-trait.workspace = true

tokio = { version = "1.0", features = ["time", "macros", "rt-multi-thread", "sync"] }
alloy.workspace = true
secp256k1 = { version = "0.29.1", features = ["serde", "rand", "recovery", "global-context"] }
