[package]
name = "prover"
version.workspace = true
edition.workspace = true

[lib]
name = "prover"
crate-type = ["staticlib"]

[dependencies]
automata-sgx-builder = { workspace = true, features = ["dcap", "sgx_types", "sgx_libc_pthread", "patch_rand", "patch_assert_fail"] }
log.workspace = true
serde.workspace = true
serde_json.workspace = true
env_logger.workspace = true
clients.workspace = true
prover-types.workspace = true
scroll-verifier.workspace = true
scroll-executor.workspace = true
jsonrpsee = { workspace = true, features = ["client", "server", "macros"] }

tokio = { version = "1.0", features = ["macros", "net", "rt-multi-thread"] }
alloy = { version = "0.2", default-features = false, features = ["std", "providers", "reqwest-rustls-tls"] }
quinn = "0.11.1"
url = "2.5.2"
hex.workspace = true
async-trait.workspace = true
base.workspace = true

clap = { version = "4", features = ["derive"] }