[package]
name = "prover"
version = "0.1.0"
authors = ["Automata Team"]
edition = "2021"
license = "Apache-2.0"

[features]
default = ["std"]
std = ["glog/std", "eth_types/std", "serde/std", "crypto/std", "base/std", "eth_client/std", "solidity/std", "serde_json/std", "evm_executor/std", "statedb/std", "scroll_types/std", "zktrie/std", "poseidon-rs/std", "verifier/std"]
tstd = ["sgxlib/tstd", "glog/tstd", "eth_types/tstd", "serde/tstd", "crypto/tstd", "base/tstd", "eth_client/tstd", "solidity/tstd", "serde_json/tstd", "evm_executor/tstd", "statedb/tstd", "sgxlib-ra/sgx", "scroll_types/tstd", "zktrie/tstd", "poseidon-rs/tstd", "verifier/tstd"]
sgx = ["sgxlib-ra", "sgxlib-ra/sgx", "verifier/sgx"]

[dependencies]
sgxlib = { git = "https://github.com/automata-network/sgxlib", default-features = false }
glog = { git = "https://github.com/automata-network/glog-rs", default-features = false }
eth_types = { git = "https://github.com/automata-network/eth-types-rs", default-features = false }
eth_client = { path = "../eth_client", default-features = false }
jsonrpc = { git = "https://github.com/automata-network/jsonrpc-rs", default-features = false }
solidity = { path = "../solidity", default-features = false }
base = { git = "https://github.com/automata-network/base-rs", default-features = false }
crypto = { git = "https://github.com/automata-network/crypto-rs", default-features = false }
evm_executor = { path = "../evm_executor", default-features = false }
statedb = { path = "../statedb", default-features = false }
scroll_types = { path = "../scroll_types", default-features = false }
zktrie = { git = "https://github.com/automata-network/zktrie-rs", default-features = false }
verifier = { path = "../verifier", default-features = false }
poseidon-rs = { git = "https://github.com/automata-network/poseidon-rs", default-features = false }

sgxlib-ra = { git = "https://github.com/automata-network/sgxlib-ra", default-features = false, optional = true }

serde = { git = "https://github.com/automata-network/sgxlib-thirdparty", default-features = false }
serde_json = { git = "https://github.com/automata-network/sgxlib-thirdparty", default-features = false }

rlp = { version = "0.5", default-features = false }
rlp-derive = { version = "0.1" }