[package]
name = "sgxlib-ra"
version = "0.1.0"
authors = [ "Automata Authors" ]
edition = "2021"

[features]
default = ["std"]
sgx = ["sgxlib/sgx", "crypto/sgx"]
std = ["sgx", "glog/std", "base/std", "serde/std", "eth_types/std", "net-http/std", "crypto/std", "base64/std", "serde_json/std", "jsonrpc/std", "rustls/std", "webpki/std"]
tstd = ["sgx", "sgxlib/tstd", "glog/tstd", "base/tstd", "serde/tstd", "eth_types/tstd", "net-http/tstd", "crypto/tstd", "base64/tstd", "serde_json/tstd", "jsonrpc/tstd", "rustls/tstd", "webpki/tstd"]

[dependencies]
sgxlib = { git = "https://github.com/automata-network/sgxlib", default-features = false, features = ["types", "tkey_exchange"] }
glog = { git = "https://github.com/automata-network/glog-rs", default-features = false }
base = { git = "https://github.com/automata-network/base-rs", default-features = false }
crypto = { git = "https://github.com/automata-network/crypto-rs", default-features = false }
eth_types = { git = "https://github.com/automata-network/eth-types-rs", default-features = false }
net-http = { git = "https://github.com/automata-network/net-http-rs", default-features = false }
jsonrpc = { git = "https://github.com/automata-network/jsonrpc-rs", default-features = false }

serde = { git = "https://github.com/automata-network/sgxlib-thirdparty", default-features = false }
serde_json = { git = "https://github.com/automata-network/sgxlib-thirdparty", default-features = false }
base64 = { git = "https://github.com/automata-network/sgxlib-thirdparty", default-features = false }
rustls = { git = "https://github.com/automata-network/sgxlib-thirdparty", default-features = false }
webpki = { git = "https://github.com/automata-network/sgxlib-thirdparty", default-features = false }


memoffset     = { version = "0.5.4" }
base16 = { version = "0.2.1", features = ["alloc"], default-features = false }
