[package]
name = "statedb"
version = "0.1.0"
authors = ["Automata Team"]
edition = "2021"
license = "Apache-2.0"

[features]
default = ["std"]
std = ["glog/std", "eth_types/std", "crypto/std", "base/std", "serde/std", "scroll_types/std", "zktrie/std"]
tstd = ["sgxlib/tstd", "glog/tstd", "eth_types/tstd", "crypto/tstd", "base/tstd", "serde/tstd", "scroll_types/tstd", "zktrie/tstd"]

[dependencies]
sgxlib = { git = "https://github.com/automata-network/sgxlib", default-features = false }
glog = { git = "https://github.com/automata-network/glog-rs", default-features = false }
eth_types = { git = "https://github.com/automata-network/eth-types-rs", default-features = false }
crypto = { git = "https://github.com/automata-network/crypto-rs", default-features = false }
base = { git = "https://github.com/automata-network/base-rs", default-features = false }
scroll_types = { path = "../scroll_types", default-features = false }
zktrie = { path = "../zktrie", default-features = false }

serde = { git = "https://github.com/automata-network/sgxlib-thirdparty", default-features = false }

lazy_static = { version = "1.4.0", default-features = false, features = ["spin_no_std"] }
rlp = { version = "0.5", default-features = false }
rlp-derive = { version = "0.1" }